Group email pt1 (#28)
* Add new endpoint for group emailing purposes (#26)

* Fix nodemon refresh

* Update version to 2.1.0
